# Hybrid-Python-CXX-example

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  pyproject.toml  pyrightconfig.json
src/: main.py
src/myproject/: core.cpp  generate_stubs.py  square.pyx
tests/: test_core.py
