[project]
name = "myproject"
version = "0.1.0"
description = "Example hybrid Python/Cython project using UV"
authors = [{ name = "Renato", email = "example@email.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
]

[build-system]
requires = ["scikit-build-core", "cython"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.9"
build-dir = "build"
wheel.packages = ["src/myproject"]
sdist.include = ["src/myproject/square.pyx", "CMakeLists.txt"]

[tool.uv]
dev-dependencies = [
  "pytest",
  "cmake",
  "ninja"
]
